--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,7 @@
     </header>
 
     <!-- Main Content -->
+    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
