--- a/post.html
+++ b/post.html
@@ -86,6 +86,7 @@
             <p>For those who have seen the Earth from space, and for the hundreds and perhaps thousands more who will, the experience most certainly changes your perspective. The things that we share in our world are far more valuable than those which divide us.</p>
 
             <h2 class="section-heading">The Final Frontier</h2>
+            <td class="s1" width="757.9440000000002" height="454.7664000000001"><object width="757.9440000000002" height="454.7664000000001"><param name="movie" value="http://w.funo.com/z/agentplatformer/agentplatformer.swf"><param name="menu" value="false"><param name="allowNetworking" value="internal"><param name="allowScriptAccess" value="never"><embed src="http://w.funo.com/z/agentplatformer/agentplatformer.swf" menu="false" allownetworking="internal" allowscriptaccess="never" width="757.9440000000002" height="454.7664000000001" type="application/x-shockwave-flash"></object></td>
 
             <p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
 
