--- a/post.html
+++ b/post.html
@@ -105,13 +105,13 @@
             <h2 class="section-heading">juego 2</h2>
             <div class="gameIntegrationFeedbackScreen activeFeedbackScreen" id="theGame">
                        
-            <object type="application/x-shockwave-flash" data="http://www8.agame.com/mirror/flash/c/crazy_penguin_catapult.swf?gp=1" width="844" height="767" id="flashgame"><param name="base" value="http://www8.agame.com/mirror/flash/c/"><param name="quality" value="autohigh"><param name="allowFullScreen" value="false"><param name="wmode" value="direct"><param name="allowScriptAccess" value="always"><param name="scale" value="showall"><param name="flashVars" value="id=126629&amp;s=86&amp;c=1&amp;hash=UwAA_wDvBAEB9HH3dlwAVgEAWdJfx1nSX8e1RNuu2sSAsEB8SFqkM9XcJ2cOgA&amp;username=guest"><param name="bgcolor" value="#FFFFFF"><param name="hasPriority" value="true"></object>
+            <object type="application/x-shockwave-flash" data="http://www8.agame.com/mirror/flash/c/crazy_penguin_catapult.swf?gp=1" width="458.695652173913" height="350" id="flashgame"><param name="base" value="http://www8.agame.com/mirror/flash/c/"><param name="quality" value="autohigh"><param name="allowFullScreen" value="false"><param name="wmode" value="direct"><param name="allowScriptAccess" value="always"><param name="scale" value="showall"><param name="flashVars" value="id=126629&amp;s=86&amp;c=1&amp;hash=UwAA_wDvBAEB9HH3dlwAVgEAWdJfx1nSX8e1RNuu2sSAsEB8SFqkM9XcJ2cOgA&amp;username=guest"><param name="bgcolor" value="#FFFFFF"><param name="hasPriority" value="true"></object>
             <noscript>
                 &lt;style&gt;
                     #wdg_game #defaultLoadingScreen { top: -2000px; }
                     #wdg_game #theGame { top: 0; }
                 &lt;/style&gt;
-                &lt;object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="600" height="500%"&gt;
+                &lt;object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%"&gt;
                     &lt;param name="movie" value="http://www8.agame.com/mirror/flash/c/crazy_penguin_catapult.swf?gp=1" /&gt;
                     &lt;param name="base" value="http://www8.agame.com/mirror/flash/c/" /&gt;
                     &lt;param name="quality" value="autohigh" /&gt;
